--- a/sherlock-bayes1.html
+++ b/sherlock-bayes1.html
@@ -14,6 +14,152 @@ var postBody=document.getElementById(DIV_CONTAINER_ID);
 
 
 
+function chooseRandom(pArray){ // chooses a random element given a probability distribution array
+	var rand=Math.random()
+	var sum=0
+	var i=0
+	while (rand>sum) {
+		sum+=pArray[i]
+		if (i===pArray.length-1){sum+=1}
+		i++
+	}
+	return i-1
+}
+
+function makeEvidenceChart(priors,n){
+	var innocentP=1/3
+	var evidenceChart=[]
+	var culprit=chooseRandom(priors)
+	for (var suspect=0;suspect<priors.length;suspect++) {
+		var suspectArray=[]
+		if (suspect===culprit) {
+			for (var i=0;i<n;i++){
+				suspectArray.push(true)
+			}
+		} else {
+			var falseCount=0
+			for (var i=0;i<n;i++){
+				if (Math.random()<innocentP){
+					suspectArray.push(true)
+				} else {
+					suspectArray.push(false)
+					falseCount++
+				}
+			}
+			if (falseCount===0) {
+				suspectArray[Math.floor(Math.random()*n)]=false
+			}
+		}
+		evidenceChart.push(suspectArray)
+	}
+	evidenceChart.culprit=culprit
+	evidenceChart.query=function(suspect,category,accuracy){
+		var suspicion=evidenceChart[suspect][category]
+		if (Math.random()<accuracy) {
+			return suspicion
+		} else {
+			return !suspicion
+		}
+	}
+	return evidenceChart
+}
+chart=makeEvidenceChart([0.25,0.25,0.25,0.25],5)
+console.log(chart)
+console.log("query test", chart.query(3,1,0.5))
+
+for (var i=0;i<chart.length;i++) {
+	for (var j=0;j<chart[0].length;j++) {
+		var div=document.createElement("DIV")
+		div.style.backgroundColor="rgb(230,230,100)"
+		div.style.position="absolute"
+		div.style.height=19
+		div.style.width=34
+		div.style.top=j*20+15
+		div.style.left=i*35+15
+		div.style.textAlign="center"
+		div.innerHTML=chart[i][j]
+		postBody.appendChild(div)
+	}
+}
+
+function pFalseSuspicion(n,p,q){ // the probability of having "true" even if innocent. for now, n=5,p=1/3
+	if (pFalseSuspicion.prevQ===undefined){
+		pFalseSuspicion.prevQ={}
+		console.log("once only")
+	}
+	var key=q.suspect+"-"+q.category
+	var prob
+	if (pFalseSuspicion.prevQ[key]===undefined){
+		prob=p-Math.pow(p,n)/n
+		console.log("first query here, return ",prob)
+	} else {
+		prob=pFalseSuspicion.prevQ[key]
+		var likelihood=q.accuracy
+		if (!q.result) {likelihood=1-likelihood}
+		prob=q.accuracy*prob/(prob*q.accuracy+(1-prob)*(1-q.accuracy))
+		console.log("repeated query", prob)
+	}
+	//pFalseSuspicion.prevQ[key]=prob
+	return prob
+}
+	
+	
+var falseSusp=0 //testing pFalseSuspicion(n,p)
+for (var i=0;i<1000;i++){
+	var testChart=makeEvidenceChart([1,0,0,0],5)
+	if (testChart.query(3,0,1)){
+		falseSusp++
+		//console.log(testChart,falseSusp)
+	}
+}
+console.log("exp:", falseSusp/1000, "theory: ",pFalseSuspicion(5,1/3,{result:true,suspect:1,category:0,accuracy:1}))
+
+
+function likelihood(q,suspect) { //P(qResult for qSuspect|suspect)
+	if (suspect===q.suspect) {
+		if (q.result){return q.accuracy}
+		else {return 1-q.accuracy}
+	} else {
+		var pFalsely=pFalseSuspicion(5,1/3,q) // depends on things
+		var pTrue=pFalsely*q.accuracy+(1-pFalsely)*(1-q.accuracy)
+		if (q.result){return pTrue}
+		else {return 1-pTrue}
+	}
+}
+
+//console.log(likelihood(true,1,0.9,0))
+
+function denominator(q,priors){ //P(result)
+	var prob=0
+	for (var i=0;i<priors.length;i++){
+		prob+=priors[i]*likelihood(q,i)
+	}
+	return prob
+}
+
+function bayesTheorem(q,priors){
+	var posteriors=[]
+	for (var i=0;i<priors.length;i++){
+		var prob=priors[i]*likelihood(q,i)/denominator(q,priors)
+		posteriors.push(prob)
+	}
+	return posteriors
+}
+
+var p1=bayesTheorem({result:true,suspect:1,category:0,accuracy:1},[0.25,0.25,0.25,0.25])
+console.log(p1)
+var p2=bayesTheorem({result:true,suspect:1,category:0,accuracy:1},p1)
+console.log(p2)
+var p3=bayesTheorem({result:true,suspect:1,category:0,accuracy:1},p2)
+console.log(p3)
+var p4=bayesTheorem({result:true,suspect:1,category:0,accuracy:1},p3)
+console.log(p4)
+
+
+console.log(pFalseSuspicion.prevQ)
+
+
+
 }());
 
 </script>
